--- a/src/components/ProjectCard.module.scss
+++ b/src/components/ProjectCard.module.scss
@@ -26,6 +26,17 @@
     border-radius: 18px;
     transition: transform 0.3s ease;
   }
+  .projectCreatedBy {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 5px 8px;
+    background-color: #070708a9;
+    display: flex;
+    align-items: center;
+    border-radius: 15px;
+    font-size: 12px;
+  }
 }
 
 .infoWrapper {
