--- a/src/pages/Viewer.module.scss
+++ b/src/pages/Viewer.module.scss
@@ -1,119 +1,183 @@
 .viewer {
   position: relative;
-  width: 1920px;
-  height: 1080px;
+  width: 100vw;
+  height: 100vh;
   background: #1d1d1d;
-  border: 1px solid #ffffff;
-}
 
-.background {
-  position: absolute;
-  width: 1920px;
-  height: 1080px;
-  background: url("https://baconmockup.com/1920/1080");
-}
-
-.info {
-  position: absolute;
-  left: 27px;
-  top: 962px;
-  font-family: "Inter", sans-serif;
-  font-weight: 600;
-  font-size: 24px;
-  color: #ffffff;
-
-  .title {
-    font-size: 36px;
-    margin-top: 16px;
-  }
-}
-
-.share,
-.help {
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  background: rgba(0, 0, 0, 0.58);
-  border: 1px solid #e1e1e1;
-  border-radius: 50%;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  &.share {
-    top: 14px;
-    right: 76px;
+  .canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1; /* Canvas는 UI 아래로 */
   }
 
-  &.help {
-    bottom: 14px;
-    right: 76px;
-  }
+  .ui {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2; /* UI가 Canvas 위로 */
+    pointer-events: none; /* UI 요소가 클릭 이벤트를 무시하도록 설정 */
+    .Logo {
+      pointer-events: auto;
+    }
 
-  .iconShape {
-    width: 27px;
-    height: 27px;
-    border: 4px solid #e1e1e1;
-  }
-}
-
-.helpText {
-  font-size: 48px;
-  font-weight: 600;
-  color: #ffffff;
-}
-
-.modalOverlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(10, 13, 18, 0.28);
-  backdrop-filter: blur(8px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-}
-
-.modal {
-  background: rgba(10, 13, 18, 0.7);
-  width: 524px;
-  height: 346px;
-  border-radius: 12px;
-  box-shadow: 0px 20px 24px -4px rgba(10, 13, 18, 0.1),
-    0px 8px 8px -4px rgba(10, 13, 18, 0.04);
-  position: relative;
-
-  .modalHeader {
-    display: flex;
-    justify-content: flex-end;
-    padding: 10px;
-
-    .closeButton {
-      background: none;
-      border: none;
-      color: #ffffff;
+    .info {
+      position: absolute;
+      left: 20px;
+      bottom: 0;
+      font-family: "Inter", sans-serif;
+      font-weight: 600;
       font-size: 24px;
+      color: #ffffff;
+
+      .title {
+        font-size: 36px;
+        margin-top: 16px;
+      }
+    }
+
+    .share,
+    .help {
+      position: absolute;
+      width: 60px;
+      height: 60px;
+      background: rgba(0, 0, 0, 0.58);
+      border: 1px solid #e1e1e1;
+      border-radius: 50%;
       cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      pointer-events: auto; /* 버튼은 클릭 이벤트 가능 */
+
+      &.share {
+        top: 15px;
+        right: 30px;
+      }
+
+      &.help {
+        bottom: 15px;
+        right: 30px;
+      }
+
+      .icon {
+        display: flex;
+        justify-items: center;
+        font-size: 48px;
+        color: #ffffff;
+      }
+    }
+
+    .helpText {
+      font-size: 48px;
+      font-weight: 600;
+      color: #ffffff;
     }
   }
 
-  .modalContent {
-    padding: 20px;
-    text-align: center;
-    color: #e1e1e1;
+  .modalOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(10, 13, 18, 0.28);
+    backdrop-filter: blur(8px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
 
-    h3 {
-      font-size: 18px;
-      margin-bottom: 10px;
-      color: #ffffff;
+  .modal {
+    background: rgba(10, 13, 18, 0.7);
+    width: 524px;
+    height: 346px;
+    border-radius: 12px;
+    box-shadow: 0px 20px 24px -4px rgba(10, 13, 18, 0.1),
+      0px 8px 8px -4px rgba(10, 13, 18, 0.04);
+    position: relative;
+
+    .modalHeader {
+      display: flex;
+      justify-content: flex-end;
+      padding: 10px;
+
+      .closeButton {
+        background: none;
+        border: none;
+        color: #ffffff;
+        font-size: 24px;
+        cursor: pointer;
+      }
     }
 
-    p {
-      font-size: 14px;
+    .modalContent {
+      padding: 20px 50px;
+      text-align: center;
+      color: #e1e1e1;
+
+      .iconContainer {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+
+        .key {
+          display: flex;
+          flex-direction: row;
+          gap: 10px;
+          .keyboard {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 80px;
+            height: 80px;
+            font-size: 14px;
+            font-weight: bold;
+            color: white;
+
+            img {
+              width: 100%;
+              height: auto;
+            }
+          }
+        }
+        .mouse {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 80px;
+          height: 80px;
+          font-size: 14px;
+          font-weight: bold;
+          color: white;
+
+          img {
+            width: 70%;
+            height: auto;
+          }
+        }
+      }
+
+      h3 {
+        font-size: 20px;
+        margin-bottom: 10px;
+        color: #ffffff;
+      }
+
+      p {
+        font-size: 14px;
+        line-height: 1.5;
+        color: #bdbdbd;
+
+        strong {
+          color: #ffffff;
+        }
+      }
     }
   }
 }
