--- a/src/components/Sidebar.module.scss
+++ b/src/components/Sidebar.module.scss
@@ -110,7 +110,7 @@
     padding: 8px 12px; /* 내부 여백 */
     border-radius: 8px; /* 둥근 모서리 */
     cursor: pointer;
-    color: #333; /* 기본 텍스트 색상 */
+    color: #e1e5eb; /* 기본 텍스트 색상 */
     font-size: 14px;
     font-weight: bold;
     transition: background-color 0.2s;
@@ -130,6 +130,19 @@
 
     span {
       color: #e1e5eb; /* 텍스트 색상 */
+    }
+  }
+
+  .active {
+    background-color: #31333a; /* 활성화된 메뉴의 배경색 */
+    color: #ffffff;
+
+    .icon {
+      color: #ffffff; /* 활성화된 메뉴의 아이콘 색상 */
+    }
+
+    span {
+      color: #ffffff; /* 활성화된 메뉴의 텍스트 색상 */
     }
   }
 }
