--- a/FE/src/components/modal/CreateModal.module.scss
+++ b/FE/src/components/modal/CreateModal.module.scss
@@ -72,11 +72,12 @@
     color: #fff;
     font-size: 48px;
   }
-
-  p {
-    font-size: 16px;
-    color: #fff;
-    margin: 0;
+  .fileInfo {
+    p {
+      font-size: 16px;
+      color: #fff;
+      margin: 0;
+    }
   }
 
   .browseButton {
